--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
             <ul class='videos'>
                 <li>
                     <a href='/study-video/2019-7-9-how%20to%20get%20Progess/'>
-                         <h3>【熟肉|John Fish】回答你们的问题|如何取得进步|保持平衡的方法</h3> 
+                         <h3>【熟肉|John Fish】保持平衡的方法</h3> 
                         <time>09 July 2019</time>
                         <img src='/study-video/assets/img/bili_cover/b66656ffe02a047f6e92f2530249851ac4ef3660.jpg' />
                     </a>
                 </li>
                 <li>
                     <a href='/study-video/2019-5-28-Schedule%20for%20exam%20week/'>
-                         <h3>剑桥学霸如何在考试周安排时间/自律/高效</h3> 
+                         <h3>自律/高效</h3> 
                         <time>28 May 2019</time>
                         <img src='/study-video/assets/img/bili_cover/567dacd48c1ce733e36c352a77c4e69967f4e15e.jpg' />
                     </a>
                 </li>
                 <li>
                     <a href='/study-video/2019-5-26-Day%20in%20the%20Life%20of%20a%20Cybersecurity/'>
-                         <h3>国外网络安全专业小哥自律又高效的一天</h3> 
+                         <h3>高效的一天</h3> 
                         <time>25 May 2019</time>
                         <img src='/study-video/assets/img/bili_cover/eed5bc9e388af5378e4e2de8f9cf89d76a3ac354.jpg' />
                     </a>
