--- a/pages/index.html
+++ b/pages/index.html
@@ -4,14 +4,10 @@ permalink: /
 ---
 
 <header>
-  <img src='{{ site.baseurl }}/assets/img/logo.svg' />
+  <img src='{{ site.baseurl }}/assets/img/ahui959.jpg' />
   <nav role='navigation'>
     <ul>
-      <li><a href='{{ site.baseurl }}/videos'>Videos</a></li>
-      &bull;
-      <li><a href='{{ site.baseurl }}/words'>Words</a></li>
-      &bull;
-      <li><a href='{{ site.baseurl }}/about'>About</a></li>
+      <li><a href='{{ site.baseurl }}/videos'>视频集</a></li>
     </ul>
   </nav>
 </header>
@@ -29,27 +25,3 @@ permalink: /
   {% endfor %}
 </ul>
 
-<nav>
-  <ul>
-    <li>
-      <a href='{{ site.weibo }}' target='_blank'>
-      <img src='{{ site.baseurl }}/assets/img/weibo.png' />
-      </a>
-    </li>
-    <li>
-      <a href='{{ site.twitter }}' target='_blank'>
-      <img src='{{ site.baseurl }}/assets/img/twitter.png' />
-      </a>
-    </li>
-    <li>
-      <a href='{{ site.youtube }}' target='_blank'>
-      <img src='{{ site.baseurl }}/assets/img/youtube.png' />
-      </a>
-    </li>
-    <li>
-      <a href='{{ site.baseurl }}/feed.xml' target='_blank'>
-      <img src='{{ site.baseurl }}/assets/img/rss.png' />
-      </a>
-    </li>
-  </ul>
-</nav>
