--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@ permalink: /
   <img src='{{ site.baseurl }}/assets/img/ahui959.jpg' />
   <nav role='navigation'>
     <ul>
-      <li><a href='{{ site.baseurl }}/videos'>视频集</a></li>
+      <li><a href='{{ site.baseurl }}/videos'>b站视频集</a></li>
     </ul>
   </nav>
 </header>
