--- a/pages/index.html
+++ b/pages/index.html
@@ -19,7 +19,8 @@ permalink: /
     <a href='{{ site.baseurl }}{{ video.url }}'>
       <h3>{{ video.title }}</h3>
       <time>{{ video.date | date: '%d %B %Y'}}</time>
-      <a href="https://cshgjy.github.io/pub-pages/other/b%E7%AB%99%E8%A7%86%E9%A2%91%E5%8D%9A%E5%AE%A2%E6%95%99%E7%A8%8B.html" title="点击进入‘原文编辑地址’"><img src='/study-video/assets/img/bili_cover/{{ video.cover_id }}' /></a>
+      <a href="https://github.com/cshgjy/study-video" title="点击进入‘原文编辑地址’；
+      使用教程：https://cshgjy.github.io/pub-pages/other/b%E7%AB%99%E8%A7%86%E9%A2%91%E5%8D%9A%E5%AE%A2%E6%95%99%E7%A8%8B.html"><img src='/study-video/assets/img/bili_cover/{{ video.cover_id }}' /></a>
     </a>
   </li>
   {% endfor %}
