--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@ permalink: /
 ---
 
 <header>
-  <a href="https://github.com/cshgjy/study-video" target="blank" title="点击打开“编辑页面"><img src='{{ site.baseurl }}/assets/img/ahui959.jpg' /></a>
+  <a href="https://github.com/cshgjy/study-video" target="blank" title="点击打开‘编辑页面’"><img src='{{ site.baseurl }}/assets/img/ahui959.jpg' /></a>
   <nav role='navigation'>
     <ul>
       <li><a href='{{ site.baseurl }}/videos'>b站视频集</a></li>
